--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -7,7 +7,7 @@ applications:
     routes:
       - route: allocations-pal-mohits10.cfapps.io
     path: Applications/AllocationsServer/bin/Release/netcoreapp3.1/publish
-    env:
-      REGISTRATION_SERVER_ENDPOINT: https://registration-pal-mohits10.cfapps.io
+    
     services:
       - tracker-allocations-database
+      - tracker-service-registry
