--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -7,7 +7,7 @@ applications:
     routes:
       - route: backlog-pal-mohits10.cfapps.io
     path: Applications/BacklogServer/bin/Release/netcoreapp3.1/publish
-    env:
-      REGISTRATION_SERVER_ENDPOINT: https://registration-pal-mohits10.cfapps.io
+    
     services:
       - tracker-backlog-database
+      - tracker-service-registry
