--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -7,7 +7,7 @@ applications:
     routes:
       - route: timesheets-pal-mohits10.cfapps.io
     path: Applications/TimesheetsServer/bin/Release/netcoreapp3.1/publish
-    env:
-      REGISTRATION_SERVER_ENDPOINT: https://registration-pal-mohits10.cfapps.io
+    
     services:
       - tracker-timesheets-database
+      - tracker-service-registry
