--- a/Applications/AllocationsServer/appsettings.json
+++ b/Applications/AllocationsServer/appsettings.json
@@ -17,5 +17,15 @@
     }
  },
   "REGISTRATION_SERVER_ENDPOINT": "http://registration-service/",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "hystrix": {
+    "command": {
+        "default": {
+            "circuitBreaker": {
+            "requestVolumeThreshold": 1
+            }
+        }
+    }
+  }
 }
