--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -7,7 +7,9 @@ applications:
     routes:
       - route: timesheets-pal-mohits10.cfapps.io
     path: Applications/TimesheetsServer/bin/Release/netcoreapp3.1/publish
-    
+    env:
+      GRANT_TYPE: client_credentials
     services:
       - tracker-timesheets-database
       - tracker-service-registry
+      - tracker-sso
