--- a/Applications/BacklogServer/appsettings.json
+++ b/Applications/BacklogServer/appsettings.json
@@ -16,7 +16,17 @@
         "shouldFetchRegistry": true
     }
  },
-  "REGISTRATION_SERVER_ENDPOINT": "http://registration-service/",
+ "spring": {
+  "application": {
+       "name": "backlog-server"
+   },
+   "cloud": {
+       "config": {
+           "failFast" : true,
+           "uri": "http://localhost:8888"
+       }
+   }
+},
   "AllowedHosts": "*",
 
   "hystrix": {
